# zerocrud

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/zerocrud/: __init__.py  adapters.py  core.py  exceptions.py
tests/: conftest.py  test_adapters.py  test_crud.py  test_database_adapter.py  test_edge_cases.py  test_end_to_end.py  test_memory_adapter.py
