[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerocrud"
version = "0.1.0"
description = "Generic CRUD operations with adapter pattern for SQLModel"
requires-python = ">=3.9"
dependencies = [
    "sqlmodel>=0.0.25",
    "pydantic_core>=2.39.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0", 
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']